# htmlentities-api

./: CONTRIBUTING.md  README.md  composer.json  openapi.yaml
android/: README.md  build.gradle
android/src/main/java/com/apiverve/client/: APIClient.java  APIException.java  APIResponse.java
android/src/main/java/com/apiverve/htmlentities/data/: ResponseModels.java
dart/: CHANGELOG.md  README.md  pubspec.yaml
dart/lib/: apiverve_htmlentities.dart
dart/lib/src/: client.dart  models.dart
examples/: README.md
examples/csharp/: basic.cs
examples/java/: basic.java
examples/javascript/: basic.js  error-handling.js
examples/python/: basic.py
go/: README.md  client.go  go.mod  types.go
npm/: README.md  index.d.ts  index.js  package.json
npm/examples/: basic.js
nuget/: HTMLEntitiesEncoderDecoderAPIClient.cs  HTMLEntitiesEncoderDecoderAPIClient.csproj  HTMLEntitiesEncoderDecoderAPIClient.sln  HTMLEntitiesEncoderDecoderQueryOptions.cs  Readme.md  ResponseObj.cs  apiMain.cs  apiVerveNuget.sln
php/: README.md  composer.json
php/src/: Client.php
php/src/Exceptions/: APIException.php  ValidationException.php
python/: README.md  pyproject.toml
python/src/my_api_wrapper/: __init__.py  apiClient.py  exceptions.py  setup.py  setup_dep.py
